public interface DataProvider {
 void printData();
}