public class Nutrient implements DataProvider {

 @Override
 public void printData() {
 }
}
