@startuml class diagram

interface DataProvider{
 + void printData()
}
class World{}
class Client{}
class Survey{}
class Day{}
class Brunch{}
class Food{}
class Nutrient{}
class Tree<T>{}
class Node<T>{}
class List<T>{}


World -- Client : has
Client -- Survey : has
Survey -- "1..*" Day : has
Survey .. Tree : uses
Day .. Tree : uses
Day -- "1..*" Brunch : has
Day .. DataProvider
Brunch .. List : uses
Brunch -- "1..*" Food : has
Brunch .left. DataProvider
Food .. List : uses
Food -- "1..*" Nutrient : has
Food .left. DataProvider
Tree -- Node : has
List -- Node : has
@enduml